# negmas-app

./: .gitignore  .nvim-usage.md  .nvim.lua  FRONTEND_SIMPLIFICATION.md  ISSUES.md  LICENSE  NEGOTIATION_PARAMETERS.md  POLLING_ARCHITECTURE.md  README.md  REFACTORING_PLAN.md  SESSION.md  main.py  mkdocs.yml  pyproject.toml  regenerate_plots.py  setup-dev.bat  setup-dev.sh
DataObjects/: agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp038_801w.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp0dkcb3wq.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp0sxmbc9l.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp12hbxzue.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp1a_ytf9d.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp1qr952m9.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp35lw_j6q.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp48zb77t7.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp4i6c6wla.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp4qq5fva1.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp50tis0gp.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp5iw2_15n.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp5nxyr2ji.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp62zal9et.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp6bfrsjk6.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp6su26ci3.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp86hvytgy.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp8y6bo14l.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp8zbdt_1s.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp8zexh2_1.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp9aa1ap2n.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp9h2u8h6s.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmp_8xe80j3.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpa1lgb4i3.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpai86g9ns.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpajk3q2m8.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpb2e_gquf.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpbj9fdczx.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpc38878_q.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpcv81ggy3.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpdj6uhdi8.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpdl5utt37.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpe1qs4uwn.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpeflabb8z.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpfoufre8x.xml  agents.anac.y2014.Atlas.Atlas__var_folders_51_d42424vj0jn8ntjscwsld_x40000gn_T_tmpfysnwaku.xml  (+50 more)
_store/: README.md
docs/: PANEL_LAYOUT_SYSTEM.md  index.md  (+1 more)
(+1418 files in other folders)
