[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "negmas-app"
version = "0.1.0"
description = "The NegMAS App: A GUI for NegMAS"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
    "negmas>=0.13.1",
    "negmas-genius-agents>=0.1.0",
    "negmas-llm>=0.2.0",
    "negmas-negolog>=0.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
    "plotly>=6.5.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
# rl = ["negmas-rl"]  # uncomment when negmas-rl is published
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.0",
    "pyright>=1.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[project.scripts]
negmas-app = "negmas_app.main:cli"
negmas-legacy = "negmas_app.legacy_main:cli"
negmas-helper = "negmas_app.helper_main:cli"


[tool.hatch.build.targets.wheel]
packages = ["negmas_app", "scenarios"]

[tool.hatch.build.targets.sdist]
include = ["negmas_app", "scenarios"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["negmas_app"]
omit = ["negmas_app/static/*", "negmas_app/templates/*"]

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "pytest-playwright>=0.7.2",
]

